# mesh-spy

./: .clang-format  .gitignore  CMakeLists.txt  resources.qrc
reports/: slides.typ
shaders/: geometry.frag  geometry.vert  lighting.frag  lighting.vert  skybox.frag  skybox.vert
src/: camera.cpp  camera.h  deferredrenderer.cpp  deferredrenderer.h  gbuffer.cpp  gbuffer.h  gltfloader.cpp  gltfloader.h  glviewwidget.cpp  glviewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  meshdata.h  model.cpp  model.h  renderconfig.h  skybox.cpp  skybox.h
